Fix DirectorySizeJob counting hardlinks multiple times.

This required to pass the device number and inode number from kio_file
to the job, which is only enabled when the details level is set to 3,
so as to not impact performance in other cases.

It's never too late to fix a bug from 2003.
BUG: 67939
FIXED-IN: 4.7.3